[package]
name = "market_forge"
version = "0.1.0"
edition = "2024"

[dependencies]
fake = {version="4.3.0", features=["derive"]}
slab = "0.4.9"
tabled = "0.19.0"
thiserror = "2.0.12"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "perf_order"
path = "examples/perf_order/main.rs"
